--- a/Login Ascenda/index.html
+++ b/Login Ascenda/index.html
@@ -26,11 +26,18 @@
               ><i class="fa-brands fa-linkedin-in"></i
             ></a> -->
           </div>
-          <span>Entre com seu e-mail e senha</span>
-          <!-- <input type="text" placeholder="Name" /> -->
-          <input type="email" placeholder="Email" />
-          <input type="password" placeholder="Password" />
+          <span>Entre com seu nome, e-mail e senha</span>
+          <input type="text" name="name" placeholder="Nome" autocomplete="name" required />
+          <input type="email" name="email" placeholder="Email" autocomplete="email" required />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            autocomplete="current-password"
+            required
+          />
           <a href="#">Esqueceu sua senha?</a>
+          <p class="feedback-message" aria-live="polite"></p>
           <button>Sign Up</button>
         </form>
       </div>
@@ -47,10 +54,18 @@
               ><i class="fa-brands fa-linkedin-in"></i
             ></a> -->
           </div>
-          <span>Entre com seu e-mail e senha</span>
-          <input type="email" placeholder="Email" />
-          <input type="password" placeholder="Password" />
+          <span>Entre com seu nome, e-mail e senha</span>
+          <input type="text" name="name" placeholder="Nome" autocomplete="name" required />
+          <input type="email" name="email" placeholder="Email" autocomplete="email" required />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            autocomplete="current-password"
+            required
+          />
           <a href="#">Esqueceu sua senha?</a>
+          <p class="feedback-message" aria-live="polite"></p>
           <button>Sign In</button>
         </form>
       </div>
