--- a/Login Ascenda/index.html
+++ b/Login Ascenda/index.html
@@ -7,7 +7,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+ <link rel="stylesheet" href="/Login Ascenda/style.css">
+
     <title>Ascenda | Portal de Login</title>
   </head>
 
