Retirando texto beta

--- a/loading-page/index.html
+++ b/loading-page/index.html
@@ -113,7 +113,7 @@
         </div>
 
         <!-- Badge BETA -->
-        <div class="beta-badge">BETA</div>
+        <!-- <div class="beta-badge">BETA</div> -->
     </div>
     <script src="script.js"></script>
   </body>
