--- a/Login Ascenda/index.html
+++ b/Login Ascenda/index.html
@@ -213,12 +213,12 @@
           emailPlaceholder: "E-mail",
           passwordPlaceholder: "Senha",
           forgotPassword: "Esqueceu sua senha?",
-          mentorSubmit: "Cadastrar",
+          mentorSubmit: "Entrar",
           internSubmit: "Entrar",
           mentorToggleTitle: "Padrinho",
           internToggleTitle: "Estagiário",
           toggleButtonLogin: "Entrar",
-          toggleButtonRegister: "Cadastrar",
+          toggleButtonRegister: "Entrar",
           successMessage: "Login realizado com sucesso! Redirecionando...",
           errorMessage:
             "Credenciais incorretas. Verifique nome, e-mail e senha.",
