Implement localized loading animation

--- a/Login Ascenda/index.html
+++ b/Login Ascenda/index.html
@@ -206,27 +206,27 @@
       const translations = {
         pt: {
           documentTitle: "Ascenda | Portal de Login",
-          mentorTitle: "Bem-vindo, Padrinho!",
-          internTitle: "Bem-vindo, Estagiário!",
+          mentorTitle: "Bem-vindo, Padrinho Galáctico!",
+          internTitle: "Bem-vindo, Estagiário Estelar!",
           formSubtitle: "Entre com seu nome, e-mail e senha",
           namePlaceholder: "Nome",
           emailPlaceholder: "E-mail",
           passwordPlaceholder: "Senha",
           forgotPassword: "Esqueceu sua senha?",
-          mentorSubmit: "Entrar",
+          mentorSubmit: "Cadastrar",
           internSubmit: "Entrar",
           mentorToggleTitle: "Padrinho",
           internToggleTitle: "Estagiário",
           toggleButtonLogin: "Entrar",
-          toggleButtonRegister: "Entrar",
-          successMessage: "Login realizado com sucesso! Redirecionando...",
+          toggleButtonRegister: "Cadastrar",
+          successMessage: "Login realizado com sucesso! Preparando decolagem...",
           errorMessage:
             "Credenciais incorretas. Verifique nome, e-mail e senha.",
         },
         en: {
           documentTitle: "Ascenda | Login Portal",
-          mentorTitle: "Welcome, Mentor!",
-          internTitle: "Welcome, Intern!",
+          mentorTitle: "Welcome, Galactic Mentor!",
+          internTitle: "Welcome, Stellar Intern!",
           formSubtitle: "Enter your name, email, and password",
           namePlaceholder: "Name",
           emailPlaceholder: "Email",
@@ -238,14 +238,14 @@
           internToggleTitle: "Intern",
           toggleButtonLogin: "Sign In",
           toggleButtonRegister: "Sign Up",
-          successMessage: "Login successful! Redirecting...",
+          successMessage: "Login successful! Prepping launch...",
           errorMessage:
             "Incorrect credentials. Please check your name, email, and password.",
         },
         es: {
           documentTitle: "Ascenda | Portal de Acceso",
-          mentorTitle: "¡Bienvenido, Padrino!",
-          internTitle: "¡Bienvenido, Becario!",
+          mentorTitle: "¡Bienvenido, Padrino Galáctico!",
+          internTitle: "¡Bienvenido, Becario Estelar!",
           formSubtitle: "Ingresa tu nombre, correo y contraseña",
           namePlaceholder: "Nombre",
           emailPlaceholder: "Correo",
@@ -257,7 +257,7 @@
           internToggleTitle: "Becario",
           toggleButtonLogin: "Ingresar",
           toggleButtonRegister: "Registrarse",
-          successMessage: "¡Inicio de sesión exitoso! Redirigiendo...",
+          successMessage: "¡Inicio de sesión exitoso! Preparando el despegue...",
           errorMessage:
             "Credenciales incorrectas. Verifica tu nombre, correo y contraseña.",
         },
