--- a/loading-page/index.html
+++ b/loading-page/index.html
@@ -112,7 +112,7 @@
         </div>
 
         <!-- Badge BETA -->
-        <div class="beta-badge">BETA</div>
+        <div class="beta-badge">CARREGANDO...</div>
     </div>
 
     <script src="script.js"></script>
