--- a/Login Ascenda/index.html
+++ b/Login Ascenda/index.html
@@ -9,6 +9,11 @@
     />
  <link rel="stylesheet" href="/Login Ascenda/style.css">
 
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'%3E%3Crect width='128' height='128' rx='28' fill='%230A0612'/%3E%3Ctext x='50%' y='50%' dominant-baseline='central' text-anchor='middle' font-size='88' fill='%23ffffff'%3E%F0%9F%9A%80%3C/text%3E%3C/svg%3E"
+    />
     <title>Ascenda | Portal de Login</title>
   </head>
 
