--- a/Login Ascenda/index.html
+++ b/Login Ascenda/index.html
@@ -211,8 +211,8 @@
       const translations = {
         pt: {
           documentTitle: "Ascenda | Portal de Login",
-          mentorTitle: "Bem-vindo, Padrinho Galáctico!",
-          internTitle: "Bem-vindo, Estagiário Estelar!",
+          mentorTitle: "Bem-vindo, Padrinho!",
+          internTitle: "Bem-vindo, Estagiário!",
           formSubtitle: "Entre com seu nome, e-mail e senha",
           namePlaceholder: "Nome",
           emailPlaceholder: "E-mail",
