--- a/Login Ascenda/index.html
+++ b/Login Ascenda/index.html
@@ -249,7 +249,7 @@
         },
         es: {
           documentTitle: "Ascenda | Portal de Acceso",
-          mentorTitle: "¡Bienvenido, Padrino Galáctico!",
+          mentorTitle: "¡Bienvenido, Padrino!",
           internTitle: "¡Bienvenido, Becario Estelar!",
           formSubtitle: "Ingresa tu nombre, correo y contraseña",
           namePlaceholder: "Nombre",
