--- a/Login Ascenda/index.html
+++ b/Login Ascenda/index.html
@@ -62,7 +62,7 @@
             ></a> -->
           </div>
           <span class="form-subtitle" data-i18n="formSubtitle"
-            >Entre com seu nome, e-mail e senha</span
+            >Entre com seu e-mail e senha</span
           >
           <input
             id="mentorName"
