Remove name requirement from intern login

--- a/Login Ascenda/index.html
+++ b/Login Ascenda/index.html
@@ -112,17 +112,8 @@
             ></a> -->
           </div>
           <span class="form-subtitle" data-i18n="formSubtitle"
-            >Entre com seu nome, e-mail e senha</span
+            >Entre com suas credenciais</span
           >
-          <input
-            id="internName"
-            type="text"
-            name="name"
-            placeholder="Nome"
-            data-i18n-placeholder="namePlaceholder"
-            autocomplete="name"
-            required
-          />
           <input
             id="internEmail"
             type="email"
@@ -199,7 +190,6 @@
         "caio.alvarenga@aperam.com",
       ]);
       const INTERN = {
-        name: "Caio Menezes",
         password: "123456",
         target: "/Ascenda Estagiario/index.html",
       };
@@ -213,7 +203,7 @@
           documentTitle: "Ascenda | Portal de Login",
           mentorTitle: "Bem-vindo, Padrinho!",
           internTitle: "Bem-vindo, Estagiário!",
-          formSubtitle: "Entre com seu nome, e-mail e senha",
+          formSubtitle: "Entre com suas credenciais",
           namePlaceholder: "Nome",
           emailPlaceholder: "E-mail",
           passwordPlaceholder: "Senha",
@@ -226,13 +216,13 @@
           toggleButtonRegister: "ENTRAR",
           successMessage: "Login realizado com sucesso! Preparando decolagem...",
           errorMessage:
-            "Credenciais incorretas. Verifique nome, e-mail e senha.",
+            "Credenciais incorretas. Verifique suas informações de acesso.",
         },
         en: {
           documentTitle: "Ascenda | Login Portal",
           mentorTitle: "Welcome, Galactic Mentor!",
           internTitle: "Welcome, Stellar Intern!",
-          formSubtitle: "Enter your name, email, and password",
+          formSubtitle: "Enter your credentials",
           namePlaceholder: "Name",
           emailPlaceholder: "Email",
           passwordPlaceholder: "Password",
@@ -245,13 +235,13 @@
           toggleButtonRegister: "Sign Up",
           successMessage: "Login successful! Prepping launch...",
           errorMessage:
-            "Incorrect credentials. Please check your name, email, and password.",
+            "Incorrect credentials. Please check your access information.",
         },
         es: {
           documentTitle: "Ascenda | Portal de Acceso",
           mentorTitle: "¡Bienvenido, Padrino!",
           internTitle: "¡Bienvenido, Becario Estelar!",
-          formSubtitle: "Ingresa tu nombre, correo y contraseña",
+          formSubtitle: "Ingresa tus credenciales",
           namePlaceholder: "Nombre",
           emailPlaceholder: "Correo",
           passwordPlaceholder: "Contraseña",
@@ -264,7 +254,7 @@
           toggleButtonRegister: "Registrarse",
           successMessage: "¡Inicio de sesión exitoso! Preparando el despegue...",
           errorMessage:
-            "Credenciales incorrectas. Verifica tu nombre, correo y contraseña.",
+            "Credenciales incorrectas. Verifica tu información de acceso.",
         },
       };
 
@@ -368,7 +358,6 @@
       document.getElementById("internForm").addEventListener("submit", (e) => {
         e.preventDefault();
         const fb = document.getElementById("internFeedback");
-        const name = document.getElementById("internName").value.trim();
         const email = document
           .getElementById("internEmail")
           .value.trim()
@@ -376,9 +365,7 @@
         const pass = document.getElementById("internPassword").value.trim();
 
         const valid =
-          name === INTERN.name &&
-          INTERN_ALLOWED_EMAILS.has(email) &&
-          pass === INTERN.password;
+          INTERN_ALLOWED_EMAILS.has(email) && pass === INTERN.password;
         if (valid) {
           try {
             sessionStorage.setItem("role", "intern");
